--- a/src/components/card/card.module.css
+++ b/src/components/card/card.module.css
@@ -237,8 +237,14 @@
   font-size: var(--card-title-size);
 }
 
+/** Workaround Safari bug where it does not correctly wrap text when svg is present (unique icon) */
+.name-inner {
+  display: inline-flex;
+  align-items: baseline;
+}
+
 .name .unique svg {
-  display: inline-block;
+  display: inline;
 }
 
 .name button,
@@ -258,10 +264,9 @@
 }
 
 .name .parallel {
-  display: inline-block;
-  vertical-align: middle;
+  display: inline;
+  vertical-align: baseline;
   font-size: var(--text-sm);
-  flex: 0 0 auto;
 }
 
 .sub {
